syntax = "proto3";

package shortener;
option go_package = "github.com/golangTroshin/shorturl/proto/shortener";

// Service definition for URL shortener.
service Shortener {
    rpc ShortenURL(ShortenURLRequest) returns (ShortenURLResponse);
    rpc GetOriginalURL(GetOriginalURLRequest) returns (GetOriginalURLResponse);
    rpc GetUserURLs(GetUserURLsRequest) returns (GetUserURLsResponse);
    rpc DeleteUserURLs(DeleteUserURLsRequest) returns (DeleteUserURLsResponse);
    rpc GetStats(GetStatsRequest) returns (GetStatsResponse);
    rpc Ping(PingRequest) returns (PingResponse);
}

// Request and response messages.
message ShortenURLRequest {
    string url = 1;
}

message ShortenURLResponse {
    string short_url = 1;
}

message GetOriginalURLRequest {
    string short_url = 1;
}

message GetOriginalURLResponse {
    string original_url = 1;
    bool is_deleted = 2;
}

message GetUserURLsRequest {}

message GetUserURLsResponse {
    repeated URL urls = 1;
}

message DeleteUserURLsRequest {
    repeated string short_urls = 1;
}

message DeleteUserURLsResponse {
    bool success = 1;
}

message GetStatsRequest {}

message GetStatsResponse {
    int32 urls = 1;
    int32 users = 2;
}

message PingRequest {}

message PingResponse {
    string status = 1;
}

// Reusable URL message.
message URL {
    string short_url = 1;
    string original_url = 2;
}
